added popularity sorting